# rkms

./: .clang-format  .editorconfig  .flake8  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  pyproject.toml  setup.py
contrib/hpc-unistra/: build_mesh.sh  install.sh  run.sh
data/geo/: box.geo  cuboid.db  cuboid.geo  rectangle.db  rectangle.geo  square.geo
doc/: pn_perfs.md
examples/: astro_solve_pn.py  solve_astro_m1.py  solve_astro_m1_clump.py  solve_astro_m1_stromgren_sphere.py  solve_astro_pn.py  solve_pn.py  solve_tp.py
examples/acoustic/: solve_m1_cube_isotropic.py  solve_sn_cube_isotropic.py
examples/acoustic/acoustic/: __init__.py  _m1.py  _sn.py  _solver.py
examples/acoustic/cl/common/: quad_lebedev.cl  quad_trigauss.cl  quad_uniform.cl
examples/astro/: astro.py  solve_astro_beam.py  solve_astro_stromgren_sphere.py  solve_astro_stromgren_sphere_load.py
examples/base/: solve_pn.py  solve_tp.py
examples/cl/astro/: h_chemistry.cl
examples/cl/astro/pn/: p1.cl  (+8 more)
examples/cl/pn/: p1.cl  p11.cl  p3.cl  p5.cl  p7.cl  p9.cl  pn.cl
examples/cl/transport/: tp.cl
examples/mesh/: mesh_builder.py  mesh_strip_periodic_neighbours.py
examples/meshes/: build_mesh.py
exemples/cl/pn/: p11.cl  p3.cl  p7.cl  pn.cl
rkms/: __init__.py
rkms/common/: __init__.py  common.py
rkms/mesh/: __init__.py  _builder.py  _common.py  _elements.py  _mesh.py  mesh.py
rkms/mesh/src/: mesh_h8_process.cpp  mesh_h8_process.h  mesh_q4_process.cpp  mesh_q4_process.h  pybind11_wrappers.cpp
rkms/model/: __init__.py  _m1.py  _model.py  _pn.py  _sn.py  _tp.py
rkms/simulation/: __init__.py  cl_helpers.py  helpers.py  model.py  simulation.py  solver.py
rkms/simulation/cl/: test_muscl.cl
rkms/solver/: __init__.py  _solver.py  finite_volume.py
tests/: test_mesh.py  test_simulation.py
tests/meshes/: h8_unit_cube_nx2_ny2_nz2.msh  q4_unit_square_nx2_ny2.msh
(+34 files in other folders)
