[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "pybind11",
    "cmake>=3.18",
    "ninja",
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
